Fix mobile phone z-index on position fixed glitch

--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -30,7 +30,10 @@
 	}
 
 	.logo-header {
-		z-index: -1;
+        -webkit-transform:translateZ(1px);
+        -moz-transform:translateZ(1px);
+        -o-transform:translateZ(1px);
+        transform:translateZ(1px);
 		position: fixed;
 		top: 50%;
 		left: 50%;
@@ -49,7 +52,10 @@
 
 	.panah {
 		position: fixed;
-		z-index: 0;
+        -webkit-transform:translateZ(1px);
+        -moz-transform:translateZ(1px);
+        -o-transform:translateZ(1px);
+        transform:translateZ(1px);
 		bottom: 20px;
 		left: 50%;
 		-webkit-transform: translate(-50%, 0);
